2004-02-18  Hubert Figuiere  <hfiguiere@teaser.fr>

	* app/disp_callbacks.c (popup_object_menu): append a menu item to 
	display properties.

2004-02-17  Hubert Figuiere  <hfiguiere@teaser.fr>

	* app/app_procs.c: declare rc properly with the proper #ifdef

2004-02-17  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/xfig/xfig-import.c: Correct ordering of imported FIG
	objects (which seemingly FIG itself breaks, or else there is no
	ordering).

2004-02-16  Lars Clausen  <lrclause@cs.uiuc.edu>

	* plug-ins/xfig/xfig-export.c (figLineWidth): Check for minimum
	width renderable in xfig.  Helps on bug #133637, but does not
	quite fix it -- something about depth is wrong.

	* plug-ins/xslt/xslt.[ch]: Patch #133913 from phenning@lanl.gov:
	Extern definitions for Mac compilation.

	* app/app_procs.c: Patch #131159 from J. H. M. Dassen
	(jdassen@debian.org): Include fix.

	* app/interface.c: Patch #130100 from luc@handhelds.org:  Make
	sure the initial diagram size is correct.

2004-02-15  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/Makefile.am (AM_CPPFLAGS): Override AM_CPPFLAGS instead of
	CPPFLAGS, as per automake warning.
	* app/Makefile.am (AM_LDFLAGS): Override AM_LDFLAGS instead of
	LDFLAGS, as per automake warning.
	(run_dia.sh): More robust creation, and more easily moved.

	* app/undo.c (group_objects_revert): Don't double-free the objects
	list.  (#129221) Call object_add_updates on grouped objects.
	(ungroup_objects_revert): Call object_add_updates on grouped objects.

	* lib/diagramdata.c: Internal
	documentation. 

	* lib/polyshape.c (polyshape_update_data): Correctly calculate
	directions for polyshape corners (thanks, Valgrind!)

	* lib/attributes.c: 
	* lib/prop_attr.c (arrowprop_load): Use default arrow size.

	* lib/arrows.h: Default arrow size defined.  After all are using
	this, may lower to 0.4 or so.

	* app/lineprops_area.[ch]: New function to set the arrow type for an
	arrow chooser.
